NOJIRA - Update docs
* Add Java out of memory issue